commited fpr color

--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 .bg-color {
-  background-color: #6750a7;
+  background-color: #FF9B45;
   color: white;
 }
-.text-color{
-  color: #6750a7;
+.text-color {
+  color: #eb8a36;
 }
